--- a/core/config.template
+++ b/core/config.template
@@ -6,7 +6,7 @@ import subprocess
 import string
 import config
 PORT = '{PORT}'
-VERSION = '1.0.1'
+VERSION = '1.0.1 beta'
 AGENTS = dict()
 COMMAND = dict()
 TIME = dict()
