Add Webshell Management  and time stomp Features

--- a/core/config.template
+++ b/core/config.template
@@ -14,9 +14,12 @@ AGENTS = dict()
 COMMAND = dict()
 TIME = dict()
 COUNT = 0
+WEBSHELLS=dict()
+WEBSHELL_COUNT=0
 HOST='{IP}'
 BASE = 'Ninja'
 POINTER = 'main'
+Implant_Type='agent'
 PAYLOADS = []
 SSL={SSL}
 CERT='{CERT}'
