--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pycrypto
 cheroot
-flask
+flask~=2.0.2
 donut-shellcode==0.9.2
-pypykatz
-prettytable
+pypykatz~=0.5.2
+prettytable~=3.0.0
+
+rich==11.1.0
