--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pycrypto
 cheroot
-flask~=2.0.2
+flask
 donut-shellcode==0.9.2
-pypykatz~=0.5.2
-prettytable~=3.0.0
-
-rich==11.1.0
+pypykatz
+prettytable
+pycryptodome
+rich
